<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main -->    
    
    <string name="app_name">esCam</string>
    <string name="title_activity_main">esCam</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_file">File</string>
    <string name="title_activity_perspective">Perspective</string>    
    <string name="title_activity_save">Save</string>
    
    <!--  Home -->
       
    <string name="button_from_camera">Image from camera</string>
    <string name="button_from_file">Image from file</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About esCam</string>
    
    <!--  About -->

    <string name="about_text">esCam - JOADTOR 2013</string>
    <string name="ocv_text">Powered by OpenCV</string>
    
    
    <!--  Options Bar -->

    <string name="ok_button">OK</string>
    <string name="increase">+</string>
    <string name="dec">-</string>
    <string name="_90">90</string>
    <string name="_180">180</string>

    <!--  File -->
    
    <string name="inter_area">Area interpolation.</string>
    <string name="inter_bits2">Bits2 interpolation.</string>
    <string name="inter_cubic">Cubic interpolation.</string>
    <string name="inter_lanczos4">Lanczos4 interpolation.</string>
    <string name="inter_linear">Linear interpolation.</string>
    <string name="inter_max">Max interpolation.</string>
    <string name="inter_nearest">Nearest Neighbour interpolation.</string>
    
    <!--  Perspective -->

    <string name="no_filter">Unfiltered image.</string>
    <string name="binarize_filter">Binarized image.</string>
    <string name="binarize_custom_filter">Binarized image with user defined threshold.</string>
    <string name="tozero_filter">Mask binarized image.</string>
    <string name="dialog_title">Threshold</string>
    <string name="dialog_msg">Select threshold (0&#8211;255)</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    
     <!--  Save -->
   
    <string name="button_save">Save!</string>
    <string name="image_saved">Image saved successfully.</string>
    <string name="path">Path:</string>
    
    
    <!--  Preferences -->
    
    <string name="pref_Title_scan">Scan settings</string> 
    <string name="pref_Title_save">Save settings</string> 
    
    <string name="pref_InterAlg_sum">Set a default interpolation algorithm.</string>
    <string name="pref_InterAlg">Interpolation Algorithm</string>
        
    <string-array name="InterAlg">
        <item name="1">Area</item>
        <item name="2">Bits2</item>
        <item name="3">Cubic</item>
        <item name="4">Lanczos4</item>
        <item name="5">Linear</item>
        <item name="6">Max</item>
        <item name="7">Nearest Neighbour</item>
    </string-array>
    
    
	<string-array name="InterAlgValues">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
        <item name="6">6</item>
        <item name="7">7</item>
    </string-array>
    
    <string name="pref_Filter_sum">Set a default image filter.</string>
    <string name="pref_Filter">Filtering</string>
        
    <string-array name="Filter">
        <item name="1">Unfiltered</item>
        <item name="2">Binarized</item>
        <item name="3">Mask Binarized</item>
    </string-array>
    
    
	<string-array name="FilterValues">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
    </string-array>
    
	<string name="pref_Format_sum">Set a default output format.</string>
    <string name="pref_Format">Output format</string>
        
    <string-array name="Format">
        <item name="1">JPEG</item>
        <item name="2">PNG</item>
    </string-array>
    
    <string-array name="FormatValues">
        <item name="1">0</item>
        <item name="2">1</item>
    </string-array>

    

</resources>